feat: Performance Update